EA-2891 Fix resolve references for id and uri searching